float responsive at chrome and firefox

--- a/npilshchikova/float/index.html
+++ b/npilshchikova/float/index.html
@@ -30,25 +30,27 @@
                     <img src="img/9.svg" class="weather-icon svg" id="weather-current">
                 </div>
                 <div class="forecast-small half-cell">
-                    <div class="inner-cell">
-                        <p>MON</p>
-                        <img src="img/18.svg" class="icon-small svg">
-                        <p>22&deg;</p>
-                    </div>
-                    <div class="inner-cell">
-                        <p>TUE</p>
-                        <img src="img/18.svg" class="icon-small svg">
-                        <p>19&deg;</p>
-                    </div>
-                    <div class="inner-cell">
-                        <p>WEN</p>
-                        <img src="img/14.svg" class="icon-small svg">
-                        <p>18&deg;</p>
-                    </div>
-                    <div class="inner-cell">
-                        <p>THU</p>
-                        <img src="img/8.svg" class="icon-small svg">
-                        <p>14&deg;</p>
+                    <div class="inner-box">
+                        <div class="inner-cell">
+                            <p>MON</p>
+                            <img src="img/18.svg" class="icon-small svg">
+                            <p>22&deg;</p>
+                        </div>
+                        <div class="inner-cell">
+                            <p>TUE</p>
+                            <img src="img/18.svg" class="icon-small svg">
+                            <p>19&deg;</p>
+                        </div>
+                        <div class="inner-cell">
+                            <p>WEN</p>
+                            <img src="img/14.svg" class="icon-small svg">
+                            <p>18&deg;</p>
+                        </div>
+                        <div class="inner-cell">
+                            <p>THU</p>
+                            <img src="img/8.svg" class="icon-small svg">
+                            <p>14&deg;</p>
+                        </div>
                     </div>
                 </div>
             </div>
