--- a/Natalya Kuznetsova/grid/index.html
+++ b/Natalya Kuznetsova/grid/index.html
@@ -10,7 +10,7 @@
 <body>
   <section class="weather">
     <article class="widget">
-      <div class="widget__weather_info ">
+      <div class="widget__weather_info">
         <img class="widget__weather_info__img" src="images/cloud.png" alt="cloudy sky">
         <ul class="widget__weather_info__list">
           <li class="widget__weather_info__list__list_item__gedree">79&deg;</li>
@@ -25,7 +25,7 @@
         </ul>
       </div>
       <footer class="widget__weather_params">
-        <ul class="widget__weather_params__params_list clearfix">
+        <ul class="widget__weather_params__params_list">
           <li class="widget__weather_params__params_list__params_item">
             <img class="widget__weather_params__params_list__params_item__img_wind" src="images/wind.png" alt="wind">
             <span class="widget__weather_params__params_list__params_item__wind_value">2MPH</span>
