--- a/Yuriy_Lysov/layout_with_float/index.html
+++ b/Yuriy_Lysov/layout_with_float/index.html
@@ -8,70 +8,95 @@
   <link rel="stylesheet" href="css/media/media.css">
   <title>Cubes.psd</title>
 </head>
-<body >
+<body>
+  <!-- Background -->
   <div class="background"></div>
+  <!-- Container -->
   <div class="container">
+
+    <!-- Row -->
     <div class="row">
-        <div class="block block_first">
-          <img src="img/CloudWater.png" alt="Cloud and Water">
-          <p> CHICAGO / 23°</p>
-        </div>
-        <div class="block block_second">
-            <img src="img/Fog.png" alt="Fog">
-            <p> SEATTLE / 34°</p>
-        </div>
-        <div class="block block_third">
-          <img src="img/CloudSun.png" alt="Cloud and Sun">
-          <p> BROOKLIN / 55°</p>
-        </div>
+      <!-- First block -->
+      <div class="block block_first">
+        <img src="img/CloudWater.png" alt="Cloud and Water">
+        <p> CHICAGO / 23°</p>
+      </div>
+      <!-- End of First block -->
+
+      <!-- Second block -->
+      <div class="block block_second">
+          <img src="img/Fog.png" alt="Fog">
+          <p> SEATTLE / 34°</p>
+      </div>
+      <!-- End of Second block -->
+
+      <!-- Third block -->
+      <div class="block block_third">
+        <img src="img/CloudSun.png" alt="Cloud and Sun">
+        <p> BROOKLIN / 55°</p>
+      </div>
+      <!-- End of Third block -->
     </div> 
+    <!-- end of Row -->
+
+    <!-- Row -->
     <div class="row">
-        <div class="block block_fourth">
-          <img src="img/CloudSnowSun.png" alt="Cloud, Sun and Snow">
-          <p> PORTLAND / 27°</p>
+
+      <!-- Fourth block -->
+      <div class="block block_fourth">
+        <img src="img/CloudSnowSun.png" alt="Cloud, Sun and Snow">
+        <p> PORTLAND / 27°</p>
+      </div>
+      <!-- End of Fourth block -->
+
+      <!-- Fifth block -->
+      <div class="block block_fifth">
+        <div class="block_fifth_top">
+          <img src="img/CloudWindMoon.png" alt="">
         </div>
-        <div class="block block_fifth">
-          <div class="block_fifth_top">
-            <img src="img/CloudWindMoon.png" alt="">
-          </div>
-          <div class="block_fifth_bottom">
-            <div class="container-small">
-              <div class="row">
-                <div class="block-small">
-                  <p>MON</p>
-                  <img src="img/CloudSun.png" alt="">
-                  <p>22°</p>
-                </div>
-                <div class="block-small">
-                  <p>TUE</p>
-                  <img src="img/CloudWindMoon.png" alt="">
-                  <p>19°</p>
-                </div>
-                <div class="block-small">
-                  <p>WEN</p>
-                  <img src="img/Cloud.png" alt="">
-                  <p>18°</p>
-                </div>
-                <div class="block-small">
-                  <p>THU</p>
-                  <img src="img/Fog.png" alt="">
-                  <p>14°</p>
-                </div>
+        <div class="block_fifth_bottom">
+          <div class="container-small">
+            <div class="row">
+
+              <div class="block-small">
+                <p>MON</p>
+                <img src="img/CloudSun.png" alt="">
+                <p>22°</p>
               </div>
+
+              <div class="block-small">
+                <p>TUE</p>
+                <img src="img/CloudWindMoon.png" alt="">
+                <p>19°</p>
+              </div>
+
+              <div class="block-small">
+                <p>WEN</p>
+                <img src="img/Cloud.png" alt="">
+                <p>18°</p>
+              </div>
+
+              <div class="block-small">
+                <p>THU</p>
+                <img src="img/Fog.png" alt="">
+                <p>14°</p>
+              </div>
+
             </div>
           </div>
         </div>
-        <div class="block block_sixth">
-          <img src="img/Cloud.png" alt="Cloud">
-          <p> SAN JOSE / 47°</p>
-        </div>
+      </div>
+      <!-- End of Fifth block -->
+
+      <!-- Sixth block -->
+      <div class="block block_sixth">
+        <img src="img/Cloud.png" alt="Cloud">
+        <p> SAN JOSE / 47°</p>
+      </div>
+      <!-- End of Sixth block -->
     </div> 
+    <!-- End of Row -->
   </div>
-
-
-  </div>
-  
-
-
+  <!-- End of Container -->
 </body>
 </html>
