Fixed index.html and style.css files according to comments to homework #1

--- a/Varvara Belitskaia/flexbox/index.html
+++ b/Varvara Belitskaia/flexbox/index.html
@@ -35,7 +35,15 @@
                     <div class="sun"><img src="images/stats_sun.png" alt="Sun" title="Sun">83%</div>
                 </div>
                 <div class="scroller">
-                    <a href="javascript:void(0);"><img src="images/scroller_active.png"></a><a href="javascript:void(0);"><img src="images/scroller.png"></a><a href="javascript:void(0);"><img src="images/scroller.png"></a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller_active.png">
+                    </a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller.png">
+                    </a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller.png">
+                    </a>
                 </div>               
             </footer>       
         </section>
