--- a/Varvara Belitskaia/float/index.html
+++ b/Varvara Belitskaia/float/index.html
@@ -12,7 +12,9 @@
             <div class="weather-image-container">  
                 <img class="weather-icon" src="images/weather_cloudy_skies.png" alt="Cloudy Skies" title="Cloudy Skies">
                 <div class="refresh-icon">
-                    <a href="javascript:void(0);"><img src="images/refresh.png"></a>
+                    <a href="javascript:void(0);">
+                        <img src="images/refresh.png">
+                    </a>
                 </div>
             </div>
             <div class="current">
@@ -44,7 +46,15 @@
                     </div>
                 </div>
                 <div class="scroller">
-                    <a href="javascript:void(0);"><img src="images/scroller_active.png"></a><a href="javascript:void(0);"><img src="images/scroller.png"></a><a href="javascript:void(0);"><img src="images/scroller.png"></a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller_active.png">
+                    </a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller.png">
+                    </a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller.png">
+                    </a>
                 </div>               
             </footer>       
         </section>
