--- a/Varvara Belitskaia/grid/index.html
+++ b/Varvara Belitskaia/grid/index.html
@@ -15,7 +15,9 @@
                     <img src="images/weather_cloudy_skies.png" alt="Cloudy Skies" title="Cloudy Skies">
                 </div>
                 <div class="refresh-icon">
-                    <a href="javascript:void(0);" ><img src="images/refresh.png"></a>
+                    <a href="javascript:void(0);">
+                        <img src="images/refresh.png">
+                    </a>
                 </div>
             </div>
             <div class="current">
@@ -47,7 +49,15 @@
                     </div>
                 </div>
                 <div class="scroller">
-                    <a href="javascript:void(0);"><img src="images/scroller_active.png"></a><a href="javascript:void(0);"><img src="images/scroller.png"></a><a href="javascript:void(0);"><img src="images/scroller.png"></a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller_active.png">
+                    </a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller.png">
+                    </a>
+                    <a href="javascript:void(0);">
+                        <img src="images/scroller.png">
+                    </a>
                 </div>               
             </footer>       
         </section>
