--- a/Anastasia Sokolova/grid/index.html
+++ b/Anastasia Sokolova/grid/index.html
@@ -28,7 +28,7 @@
                         <div class="data">
                              <span class=text_data> 
                              MAY<br>
-                            <span style="font-size: 18pt">21</span> 
+                            <span>21</span> 
                             </span>
                          </div>
                      
