--- a/Varvara Belitskaia/flexbox/index.html
+++ b/Varvara Belitskaia/flexbox/index.html
@@ -11,13 +11,18 @@
         <section class="widget">
             <div class="weather-image-container">  
                 <div class="empty-container"></div>
-                <img class="weather-icon" src="images/weather_cloudy_skies.png" alt="Cloudy Skies" title="Cloudy Skies">
-                <a href="javascript:void(0);" ><img class="refresh-icon" src="images/refresh.png"></a>
+                <div class="weather-icon">
+                    <img src="images/weather_cloudy_skies.png" alt="Cloudy Skies" title="Cloudy Skies">
+                </div>
+                <div class="refresh-icon">
+                    <a href="javascript:void(0);">
+                        <img src="images/refresh.png">
+                    </a>
+                </div>
             </div>
             <div class="current">
                 <div class="temperature">
                     <p class="temperature-value">79</p> 
-                    <p class="degree-symbol">O</p>
                 </div>
                 <div class="middle-column">
                     <p class="weather-text">Cloudy Skies</p>
@@ -30,19 +35,28 @@
             </div>
             <footer>
                 <div class="stats">
-                    <div class="wind"><img src="images/stats_wind.png" alt="Wind" title="Wind">2 MPH</div>
-                    <div class="humidity"><img src="images/stats_humidity.png" alt="Humidity" title="Humidity">33%</div>
-                    <div class="sun"><img src="images/stats_sun.png" alt="Sun" title="Sun">83%</div>
+                    <div class="wind">
+                        <img class = "stats-img" src="images/stats_wind.png" alt="Wind" title="Wind">
+                        2 MPH
+                    </div>
+                    <div class="humidity">
+                        <img class = "stats-img" src="images/stats_humidity.png" alt="Humidity" title="Humidity">
+                        33%
+                    </div>
+                    <div class="sun">
+                        <img class = "stats-img" src="images/stats_sun.png" alt="Sun" title="Sun">
+                        83%
+                    </div>
                 </div>
                 <div class="scroller">
                     <a href="javascript:void(0);">
-                        <img src="images/scroller_active.png">
+                        <img class = "scroller-img" src="images/scroller_active.png">
                     </a>
                     <a href="javascript:void(0);">
-                        <img src="images/scroller.png">
+                        <img class = "scroller-img" src="images/scroller.png">
                     </a>
                     <a href="javascript:void(0);">
-                        <img src="images/scroller.png">
+                        <img class = "scroller-img" src="images/scroller.png">
                     </a>
                 </div>               
             </footer>       
