--- a/Varvara Belitskaia/float/index.html
+++ b/Varvara Belitskaia/float/index.html
@@ -33,27 +33,27 @@
             <footer>
                 <div class="stats">
                     <div class="wind">
-                        <img src="images/stats_wind.png" alt="Wind" title="Wind">
-                        <p>2 MPH</p>
+                        <img class="stats-img" src="images/stats_wind.png" alt="Wind" title="Wind">
+                        <p class="stats-text">2 MPH</p>
                     </div>
                     <div class="humidity">
-                        <img src="images/stats_humidity.png" alt="Humidity" title="Humidity">
-                        <p>33%</p>
+                        <img class="stats-img" src="images/stats_humidity.png" alt="Humidity" title="Humidity">
+                        <p class="stats-text">33%</p>
                     </div>
                     <div class="sun">
-                        <img src="images/stats_sun.png" alt="Sun" title="Sun">
-                        <p>83%</p>
+                        <img class="stats-img" src="images/stats_sun.png" alt="Sun" title="Sun">
+                        <p class="stats-text">83%</p>
                     </div>
                 </div>
                 <div class="scroller">
                     <a href="javascript:void(0);">
-                        <img src="images/scroller_active.png">
+                        <img class="scroller-img" src="images/scroller_active.png">
                     </a>
                     <a href="javascript:void(0);">
-                        <img src="images/scroller.png">
+                        <img class="scroller-img" src="images/scroller.png">
                     </a>
                     <a href="javascript:void(0);">
-                        <img src="images/scroller.png">
+                        <img class="scroller-img" src="images/scroller.png">
                     </a>
                 </div>               
             </footer>       
