--- a/Ruslan Gaiazov/float/index.html
+++ b/Ruslan Gaiazov/float/index.html
@@ -10,50 +10,52 @@
 </head>
 <body>
 	<main>
-		<div class="weather-big-section">
-			<img src="img/rain.png" alt="rainy">
-			<span>chicago / 23&deg;</span>
-		</div>
-		<div class="weather-big-section">
-			<img src="img/fog.png" alt="foggy">
-			<span>seattle / 34&deg;</span>
-		</div>
-		<div class="weather-big-section">
-			<img src="img/cloud-sun.png" alt="partially cloudy">
-			<span>brooklyn / 55&deg;</span>
-		</div>
-		<div class="weather-big-section">
-			<img src="img/cloud-sun-snow.png" alt="partially cloudy and rainy">
-			<span>portland / 27&deg;</span>
-		</div>
-		<div class="weather-big-section">
-			<img src="img/cwm.png" alt="night with wind" id="weather-icon">
-			<div id="weather-of-the-week">
-				<div class="days-of-the-week">
-					<span>mon</span>
-					<img src="img/minirain.png" class="weather-small-icon" alt="rainy">
-					<span class="degrees">22&deg;</span>
-				</div>
-				<div class="days-of-the-week">
-					<span>tue</span>
-					<img src="img/minirain.png" class="weather-small-icon" alt="rainy">
-					<span class="degrees">19&deg;</span>
-				</div>
-				<div class="days-of-the-week">
-					<span>wen</span>
-					<img src="img/minicloud.png" class="weather-small-icon" alt="cloudy">
-					<span class="degrees">18&deg;</span>
-				</div>
-				<div class="days-of-the-week">
-					<span>thu</span>
-					<img src="img/minicloud-sun.png" class="weather-small-icon" alt="partially cloudy">
-					<span class="degrees">14&deg;</span>
+		<div class="wrapper">
+			<div class="weather-big-section section-one">
+				<img src="img/rain.png" alt="rainy" class="weather-icon big">
+				<span class="cities">chicago / 23&deg;</span>
+			</div>
+			<div class="weather-big-section section-two">
+				<img src="img/fog.png" alt="foggy" class="weather-icon big">
+				<span class="cities">seattle / 34&deg;</span>
+			</div>
+			<div class="weather-big-section section-three">
+				<img src="img/cloud-sun.png" alt="partially cloudy" class="weather-icon big">
+				<span class="cities">brooklyn / 55&deg;</span>
+			</div>
+			<div class="weather-big-section section-four">
+				<img src="img/cloud-sun-snow.png" alt="partially cloudy and rainy" class="weather-icon big">
+				<span class="cities">portland / 27&deg;</span>
+			</div>
+			<div class="weather-big-section section-five">
+				<img src="img/cwm.png" alt="night with wind" class="weather-icon big detail">
+				<div class="weather-of-the-week">
+					<div class="weather-on-the-week">
+						<span class="days-of-the-week">mon</span>
+						<img src="img/minirain.png" class="weather-icon small" alt="rainy">
+						<span class="degrees">22&deg;</span>
+					</div>
+					<div class="weather-on-the-week">
+						<span class="days-of-the-week">tue</span>
+						<img src="img/minirain.png" class="weather-icon small" alt="rainy">
+						<span class="degrees">19&deg;</span>
+					</div>
+					<div class="weather-on-the-week">
+						<span class="days-of-the-week">wen</span>
+						<img src="img/minicloud.png" class="weather-icon small" alt="cloudy">
+						<span class="degrees">18&deg;</span>
+					</div>
+					<div class="weather-on-the-week">
+						<span class="days-of-the-week">thu</span>
+						<img src="img/minicloud-sun.png" class="weather-icon small" alt="partially cloudy">
+						<span class="degrees">14&deg;</span>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="weather-big-section">
-			<img src="img/cloud.png" alt="cloudy">
-			<span id="sixth-section-city">san jose / 47&deg;</span>
+			<div class="weather-big-section section-six">
+				<img src="img/cloud.png" alt="cloudy" class="weather-icon big">
+				<span class="cities if-cloudy">san jose / 47&deg;</span>
+			</div>
 		</div>
 	</main>
 </body>
