--- a/IngilevichVarvara/flexbox/index.html
+++ b/IngilevichVarvara/flexbox/index.html
@@ -22,7 +22,7 @@
 						<span>Paris, France </span>
 					</div>
 					<div class="current-wind">
-						<img src="img/wind.png"><span>14<span class="units">mph</span></span>
+						<img src="img/wind.png"><span class="temp-value">14</span><span class="units">mph</span>
 					</div>
 				</div>
 			</div>
@@ -35,16 +35,19 @@
 						<img src=img/Rain.png alt="Rain">
 						<span>10 <sup>o</sup></span>
 					</li>
+					<hr/>
 					<li class="day-block">
 						<span>Tuesday</span>
 						<img src=img/Cloudy.png alt="Rain">
 						<span>15 <sup>o</sup></span>
 					</li>
+					<hr/>
 					<li class="day-block">
 						<span>Wednesday</span>
 						<img src=img/Sunny.png alt="Rain">
 						<span>23 <sup>o</sup></span>
 					</li>
+					<hr/>
 					<li class="day-block">
 						<span>Thursday</span>
 						<img src=img/Overcast.png alt="Rain">
