--- a/Natalya Kuznetsova/grid/index.html
+++ b/Natalya Kuznetsova/grid/index.html
@@ -12,37 +12,37 @@
     <article class="widget">
       <div class="widget__weather_info">
         <img class="widget__weather_info__img" src="images/cloud.png" alt="cloudy sky">
-        <ul class="widget__weather_info__list">
-          <li class="widget__weather_info__list__list_item__gedree">79&deg;</li>
-          <li class="widget__weather_info__list__list_item__city">
-            <span class="widget__weather_info__list__list_item__city__sky">Cloudy Skies</span>
-            <span class="widget__weather_info__list__list_item__city__name">Sicklerville, New Jersey </span>
+        <ul class="weather_info_list">
+          <li class="weather_info_list__list_item_gedree">79&deg;</li>
+          <li class="weather_info_list__list_item_city">
+            <span class="weather_info_list__sky">Cloudy Skies</span>
+            <span class="weather_info_list__name">Sicklerville, New Jersey </span>
           </li>
-          <li class="widget__weather_info__list__list_item__date">
-            <span class="widget__weather_info__list__list_item__date__month">May</span>
-            <span class="widget__weather_info__list__list_item__date__day">21</span>
+          <li class="weather_info_list__list_item_date">
+            <span class="weather_info_list__month">May</span>
+            <span class="weather_info_list__day">21</span>
           </li>
         </ul>
       </div>
       <footer class="widget__weather_params">
-        <ul class="widget__weather_params__params_list">
-          <li class="widget__weather_params__params_list__params_item">
-            <img class="widget__weather_params__params_list__params_item__img_wind" src="images/wind.png" alt="wind">
-            <span class="widget__weather_params__params_list__params_item__wind_value">2MPH</span>
+        <ul class="weather_params_list">
+          <li class="weather_params_list__params_item">
+            <img class="weather_params_list__img_wind" src="images/wind.png" alt="wind">
+            <span class="weather_params_list__wind_value">2MPH</span>
           </li>
-          <li class="widget__weather_params__params_list__params_item">
-            <img class="widget__weather_params__params_list__params_item__img_wet" src="images/wet.png" alt="wet">
-            <span class="widget__weather_params__params_list__params_item__wet_value">33%</span>
+          <li class="weather_params_list__params_item">
+            <img class="weather_params_list__img_wet" src="images/wet.png" alt="wet">
+            <span class="weather_params_list__wet_value">33%</span>
           </li>
-          <li class="widget__weather_params__params_list__params_item">
-            <img class="widget__weather_params__params_list__params_item__img_sun" src="images/sun.png" alt="sun">
-            <span class="widget__weather_params__params_list__params_item__sun_value">83%</span>
+          <li class="weather_params_list__params_item">
+            <img class="weather_params_list__img_sun" src="images/sun.png" alt="sun">
+            <span class="weather_params_list__sun_value">83%</span>
           </li>
         </ul>
-        <ul class="widget__weather_params__params_pagination">
-          <li class="widget__weather_params__params_pagination__item widget__weather_params__params_pagination__item--active"></li>
-          <li class="widget__weather_params__params_pagination__item"></li>
-          <li class="widget__weather_params__params_pagination__item"></li>
+        <ul class="weather_params_pagination">
+          <li class="weather_params_pagination__item weather_params_pagination__item--active"></li>
+          <li class="weather_params_pagination__item"></li>
+          <li class="weather_params_pagination__item"></li>
         </ul>
       </footer>
     </article>
